# voice2string

./: .gitignore  CMakeLists.txt  README.md  package.xml
scripts/: voice2string_node.py  whisper.py
